--- a/back/config/db-config.json
+++ b/back/config/db-config.json
@@ -1,3 +1,3 @@
 {
-    "addr" : "mongodb://coronascan:corona19scan@cluster0-shard-00-00-emxux.mongodb.net:27017,cluster0-shard-00-01-emxux.mongodb.net:27017,cluster0-shard-00-02-emxux.mongodb.net:27017/test?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true&w=majority"
+    "addr" : "mongodb://coronascan:corona19scan@cluster0-shard-00-00-emxux.mongodb.net:27017,cluster0-shard-00-01-emxux.mongodb.net:27017,cluster0-shard-00-02-emxux.mongodb.net:27017/coronascan?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true&w=majority"
 }
