--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "google": "^2.1.0",
+    "nodemailer": "^6.4.4",
     "pdftk": "^0.0.0-rc.0",
     "react-search": "^2.1.1"
   }
