--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "scripts": {
+    "install": "(cd front && npm install) && (cd back && npm install)",
+    "start": "concurrently \"cd front && PORT=3001 npm start\" \"cd back && PORT=3001 npm start\"",
+    "build": "concurrently \"cd front && PORT=3001 npm build\" \"cd back && PORT=3001 npm build\""
+  },
   "dependencies": {
-    "@material-ui/core": "^4.9.5",
-    "@material-ui/lab": "^4.0.0-alpha.45",
+    "concurrently": "^5.1.0",
     "google": "^2.1.0",
-    "material-ui": "^0.20.2",
-    "nodemailer": "^6.4.4",
     "pdftk": "^0.0.0-rc.0",
     "react-search": "^2.1.1"
   }
