--- a/front/package.json
+++ b/front/package.json
@@ -21,11 +21,14 @@
     "react-bootstrap-typeahead": "^4.0.0",
     "react-calendar": "^2.19.2",
     "react-cool-onclickoutside": "^1.3.2",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-search": "^2.1.1",
+    "react-simple-maps": "^1.0.0-beta.0",
+    "react-tooltip": "^4.1.1",
     "use-places-autocomplete": "^1.0.2"
   },
   "devDependencies": {
