--- a/back/package.json
+++ b/back/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon server.js"
+    "dev" : "nodemon server.js",
+    "start" : "concurrently \"npm run dev\" \"cd ../ && cd front && npm run start\""
   },
   "keywords": [],
   "author": "",
