--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync ./build s3://corona.scan --profile=coronascan",
+    "upload" : "npm run build && npm run deploy" 
   },
   "dependencies": {
     "@material-ui/core": "^4.9.5",
