--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "upload": "npm run build && npm run deploy"
   },
   "dependencies": {
+    "@babel/core": "^7.9.0",
     "@material-ui/core": "^4.9.5",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@testing-library/jest-dom": "^4.2.4",
