--- a/front/package.json
+++ b/front/package.json
@@ -32,6 +32,7 @@
     "react-search": "^2.1.1",
     "react-simple-maps": "^1.0.0-beta.0",
     "react-tooltip": "^4.1.1",
+    "supports-color": "^7.1.0",
     "use-places-autocomplete": "^1.0.2"
   },
   "devDependencies": {
