--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "google": "^2.1.0",
     "nodemailer": "^6.4.6",
     "pdftk": "^0.0.0-rc.0",
+    "pify": "^5.0.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-search": "^2.1.1",
