--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
-    "@material-ui/core": "^4.9.5",
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
