--- a/front/package.json
+++ b/front/package.json
@@ -21,7 +21,7 @@
     "bootstrap": "^4.4.1",
     "material-ui": "^0.20.2",
     "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap": "^1.0.0",
     "react-bootstrap-typeahead": "^4.0.0",
     "react-calendar": "^2.19.2",
     "react-cool-onclickoutside": "^1.3.2",
