--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync ./build s3://corona.scan --profile=coronascan",
+    "deploy": "aws s3 sync ./build s3://coronascan --profile=coronascan",
     "upload": "npm run build && npm run deploy"
   },
   "dependencies": {
